--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@ Copyright 2018 Marc Johnson. All rights reserved.
 		<script type="text/javascript" src="jquery-3.3.1.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
+
 	<body>
+		<div id="toolbar">
+        	<div class="button" id="load">Load</div>
+        	<div class="button" id="save">Save</div>
+        	<!-- <div class="button disabled">Undo</div>
+        	<div class="button disabled">Redo</div> -->
+        	<div class="button" id="about">About</div>
+    	</div>
+
 		<div id="editor">
 			<div class="contents">
 				<canvas width="640" height="480">
@@ -18,5 +27,11 @@ Copyright 2018 Marc Johnson. All rights reserved.
 				<div id="nubs" style="width: 640px; height: 480px;"></div>
 			</div>	
 		</div>
+
+		<div id="loading">
+        	<script type="text/javascript">document.write('Loading...');</script>
+        	<noscript>Please enable JavaScript and refresh this page</noscript>
+    	</div>
 	</body>
+
 </html>
